--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,13 +23,11 @@ services:
         DB_DATABASE: bayronon_sys
         DB_USERNAME: smct
         DB_PASSWORD: smct
-        PUSHER_APP_ID: 1962323
-        PUSHER_APP_KEY: 4a7679920b500c68c69c
-        PUSHER_APP_SECRET: 1aaea6fab0da6050d8eb
-        PUSHER_HOST: bayronon.smctgroup.ph
-        PUSHER_PORT: 443
-        PUSHER_SCHEME: https
-        PUSHER_APP_CLUSTER: ap1
+        REVERB_APP_ID: 598309
+        REVERB_APP_KEY: c7ka37uoxutbjvnchvyl
+        REVERB_APP_SECRET: fmz4y3j9vgy5ab3hgqdm
+        REVERB_HOST: "bayronon.smctgroup.ph"
+        REVERB_PORT: 9112
     networks:
       - bayronon-network
 
