--- a/default.conf
+++ b/default.conf
@@ -82,6 +82,7 @@ server {
 
     location ~ /\.(?!well-known).* {
         deny all;
+        proxy_pass http://bayronon-reverb:8080;
     }
 
     error_log /var/log/nginx/error.log;
