--- a/default.conf
+++ b/default.conf
@@ -43,17 +43,61 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location /app {
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+
+        proxy_pass http://bayronon.form-reverb:8080;
+
+        proxy_read_timeout 60;
+        proxy_send_timeout 60;
+
+        # Very important: Allow CORS
+        add_header Access-Control-Allow-Origin https://bayronon..smctgroup.ph always;
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Bayronon.ed-With" always;
+        add_header Access-Control-Allow-Credentials true always;
+    }
+
+    location /apps {
+        proxy_http_version 1.1;
+        proxy_set_header Host $http_host;
+        proxy_set_header Scheme $scheme;
+        proxy_set_header SERVER_PORT $server_port;
+        proxy_set_header REMOTE_ADDR $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
+
+        proxy_pass http://bayronon-reverb:8080;
+
+        proxy_read_timeout 60;
+        proxy_send_timeout 60;
+
+        # Very important: Allow CORS
+        add_header Access-Control-Allow-Origin https://bayronon..smctgroup.ph always;
+        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Bayronon.ed-With" always;
+        add_header Access-Control-Allow-Credentials true always;
+    }
+
     # location /livewire/preview-file/ {
-    #     proxy_pass https://%ip%:%web_ssl_port%$request_uri;
+    #     proxy_pass https://%ip%:%web_ssl_port%$bayronon._uri;
     #     proxy_set_header Host $host;
     #     proxy_set_header X-Real-IP $remote_addr;
     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     #     proxy_cache_bypass $http_upgrade;
     #     add_header Cache-Control 'no-cache, no-store, must-revalidate';
 
-    #     # Pass the full request URI to Apache
+    #     # Pass the full bayronon. URI to Apache
     #     proxy_redirect off;
-    #     proxy_pass_request_headers on;
+    #     proxy_pass_bayronon._headers on;
     # }
 
     # location /app/ {
@@ -82,7 +126,6 @@ server {
 
     location ~ /\.(?!well-known).* {
         deny all;
-        proxy_pass http://bayronon-reverb:8080;
     }
 
     error_log /var/log/nginx/error.log;
