--- a/default.conf
+++ b/default.conf
@@ -53,7 +53,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
 
-        proxy_pass http://bayronon.form-reverb:8080;
+        proxy_pass http://bayronon-reverb:8080;
 
         proxy_read_timeout 60;
         proxy_send_timeout 60;
