--- a/default.conf
+++ b/default.conf
@@ -43,6 +43,10 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location ^~ /flux {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
+
     location /app {
         proxy_http_version 1.1;
         proxy_set_header Host $http_host;
