--- a/default.conf
+++ b/default.conf
@@ -43,8 +43,10 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ^~ /flux {
-        try_files $uri $uri/ /index.php?$query_string;
+    location /flux/ {
+        try_files $uri =404;
+        access_log off;
+        expires max;
     }
 
     location /app {
