--- a/default.conf
+++ b/default.conf
@@ -44,9 +44,12 @@ server {
     }
 
     location /flux/ {
+        root /var/www/html/public;
         try_files $uri =404;
+
         access_log off;
         expires max;
+        add_header Cache-Control "public";
     }
 
     location /app {
