--- a/default.conf
+++ b/default.conf
@@ -43,15 +43,6 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location /flux/ {
-        root /var/www/html/public;
-        try_files $uri =404;
-
-        access_log off;
-        expires max;
-        add_header Cache-Control "public";
-    }
-
     location /app {
         proxy_http_version 1.1;
         proxy_set_header Host $http_host;
@@ -68,7 +59,7 @@ server {
         proxy_send_timeout 60;
 
         # Very important: Allow CORS
-        add_header Access-Control-Allow-Origin https://bayronon..smctgroup.ph always;
+        add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Bayronon.ed-With" always;
         add_header Access-Control-Allow-Credentials true always;
@@ -90,7 +81,7 @@ server {
         proxy_send_timeout 60;
 
         # Very important: Allow CORS
-        add_header Access-Control-Allow-Origin https://bayronon..smctgroup.ph always;
+        add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
         add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Bayronon.ed-With" always;
         add_header Access-Control-Allow-Credentials true always;
