--- a/default.conf
+++ b/default.conf
@@ -61,7 +61,7 @@ server {
         # Very important: Allow CORS
         add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Request.ed-With" always;
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With" always;
         add_header Access-Control-Allow-Credentials true always;
     }
 
@@ -83,7 +83,7 @@ server {
         # Very important: Allow CORS
         add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Request.ed-With" always;
+        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With" always;
         add_header Access-Control-Allow-Credentials true always;
     }
 
