--- a/default.conf
+++ b/default.conf
@@ -43,6 +43,14 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    location /flux/ {
+        alias /var/www/html/public/flux/;
+        try_files $uri =404;
+        expires 6M;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
     location /app {
         proxy_http_version 1.1;
         proxy_set_header Host $http_host;
