--- a/default.conf
+++ b/default.conf
@@ -43,12 +43,8 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location /flux/ {
-        alias /var/www/html/public/flux/;
-        try_files $uri =404;
-        expires 6M;
-        access_log off;
-        add_header Cache-Control "public";
+    location ^~ /flux {
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location /app {
