--- a/default.conf
+++ b/default.conf
@@ -43,8 +43,12 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ^~ /flux {
-        try_files $uri $uri/ /index.php?$query_string;
+    location /flux/ {
+        proxy_pass https://bayronon.smctgroup.ph/flux/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /app {
