--- a/default.conf
+++ b/default.conf
@@ -43,8 +43,9 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location /flux/ {
-        try_files $uri =404;
+    location ~ ^/flux/flux(\.min)?\.(js|css)$ {
+        expires off;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
     location /app {
