--- a/default.conf
+++ b/default.conf
@@ -48,49 +48,49 @@ server {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location /app {
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;
-        proxy_set_header Scheme $scheme;
-        proxy_set_header SERVER_PORT $server_port;
-        proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+    # location /app {
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $http_host;
+    #     proxy_set_header Scheme $scheme;
+    #     proxy_set_header SERVER_PORT $server_port;
+    #     proxy_set_header REMOTE_ADDR $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "Upgrade";
 
-        proxy_pass http://bayronon-reverb:8080;
+    #     proxy_pass http://bayronon-reverb:8080;
 
-        proxy_read_timeout 60;
-        proxy_send_timeout 60;
+    #     proxy_read_timeout 60;
+    #     proxy_send_timeout 60;
 
-        # Very important: Allow CORS
-        add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With" always;
-        add_header Access-Control-Allow-Credentials true always;
-    }
+    #     # Very important: Allow CORS
+    #     add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
+    #     add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+    #     add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With" always;
+    #     add_header Access-Control-Allow-Credentials true always;
+    # }
 
-    location /apps {
-        proxy_http_version 1.1;
-        proxy_set_header Host $http_host;
-        proxy_set_header Scheme $scheme;
-        proxy_set_header SERVER_PORT $server_port;
-        proxy_set_header REMOTE_ADDR $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
+    # location /apps {
+    #     proxy_http_version 1.1;
+    #     proxy_set_header Host $http_host;
+    #     proxy_set_header Scheme $scheme;
+    #     proxy_set_header SERVER_PORT $server_port;
+    #     proxy_set_header REMOTE_ADDR $remote_addr;
+    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #     proxy_set_header Upgrade $http_upgrade;
+    #     proxy_set_header Connection "Upgrade";
 
-        proxy_pass http://bayronon-reverb:8080;
+    #     proxy_pass http://bayronon-reverb:8080;
 
-        proxy_read_timeout 60;
-        proxy_send_timeout 60;
+    #     proxy_read_timeout 60;
+    #     proxy_send_timeout 60;
 
-        # Very important: Allow CORS
-        add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With" always;
-        add_header Access-Control-Allow-Credentials true always;
-    }
+    #     # Very important: Allow CORS
+    #     add_header Access-Control-Allow-Origin https://bayronon.smctgroup.ph always;
+    #     add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+    #     add_header Access-Control-Allow-Headers "Origin, Content-Type, Accept, Authorization, X-Requested-With" always;
+    #     add_header Access-Control-Allow-Credentials true always;
+    # }
 
     # location /livewire/preview-file/ {
     #     proxy_pass https://%ip%:%web_ssl_port%$bayronon._uri;
