--- a/default.conf
+++ b/default.conf
@@ -39,9 +39,9 @@ server {
         log_not_found off;
     }
 
-    location ^~ /livewire {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
+    # location ^~ /livewire {
+    #     try_files $uri $uri/ /index.php?$query_string;
+    # }
 
     location ~ ^/flux/flux(\.min)?\.(js|css)$ {
         expires off;
