--- a/default.conf
+++ b/default.conf
@@ -39,15 +39,6 @@ server {
         log_not_found off;
     }
 
-    # location ^~ /livewire {
-    #     try_files $uri $uri/ /index.php?$query_string;
-    # }
-
-    location ~ ^/flux/flux(\.min)?\.(js|css)$ {
-        expires off;
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-
     location /app {
         proxy_http_version 1.1;
         proxy_set_header Host $http_host;
@@ -92,29 +83,16 @@ server {
         add_header Access-Control-Allow-Credentials true always;
     }
 
-    # location /livewire/preview-file/ {
-    #     proxy_pass https://%ip%:%web_ssl_port%$bayronon._uri;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_cache_bypass $http_upgrade;
-    #     add_header Cache-Control 'no-cache, no-store, must-revalidate';
+    location ^~ /livewire {
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
-    #     # Pass the full bayronon. URI to Apache
-    #     proxy_redirect off;
-    #     proxy_pass_bayronon._headers on;
-    # }
-
-    # location /app/ {
-    #     proxy_pass http://localhost:6001;
-    #     proxy_set_header Upgrade $http_upgrade;
-    #     proxy_set_header Connection "Upgrade";
-    #     proxy_set_header Host $host;
-    #     proxy_cache_bypass $http_upgrade;
-    # }
+    location ~ ^/flux/flux(\.min)?\.(js|css)$ {
+        expires off;
+        try_files $uri $uri/ /index.php?$query_string;
+    }
 
     location ~ \.php$ {
-        # fastcgi_pass unix:/var/run/php/php8.2-fpm.sock;
         fastcgi_pass bayronon-app:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         fastcgi_index index.php;
