--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - ./php.ini:/usr/local/etc/php/php.ini
       - ./storage:/var/www/html/storage
+      - /home/webserver/systems/testing/Bayronon-Monitoring-Sys/.env:/var/www/.env
     environment:
         APP_ENV: production
         APP_URL: https://bayronon.smctgroup.ph
@@ -65,9 +66,22 @@ services:
     - bayronon-app
     restart: unless-stopped
     container_name: bayronon-reverb
-
     networks:
       - bayronon-network
+
+  queue-worker:
+    image: bayronon-app
+    container_name: bayronon-app-worker
+    working_dir: /var/www/
+    depends_on:
+      - bayronon-app
+    command: php artisan queue:work --tries=3
+    volumes:
+      - /home/webserver/systems/testing/Bayronon-Monitoring-Sys/.env:/var/www/.env
+      - ./:/var/www
+    networks:
+      - bayronon-app
+    restart: unless-stopped
 
 networks:
   bayronon-network:
